--- a/InventoryManagement.API/InventoryManagement.API.csproj
+++ b/InventoryManagement.API/InventoryManagement.API.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
