updated user controller and secret key move to appsettings.json

--- a/InventoryManagement.API/appsettings.json
+++ b/InventoryManagement.API/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "InventoryManagementConnectionString": "server=DESKTOP-DH1O5F3;database=InventoryManagementDB;Trusted_Connection=true"
+  },
+  "AppSettings": {
+    "SecretKey": "veryverysecret....."
   }
 }
